RESOLVED FIXED307593
REGRESSION(302297@main): Dark mode is broken in Wikipedia
https://bugs.webkit.org/show_bug.cgi?id=307593
Summary REGRESSION(302297@main): Dark mode is broken in Wikipedia
Matthieu Dubet
Reported 2026-02-11 13:50:35 PST
https://en.wikipedia.org/wiki/Nominal_type_system Turning dark mode (radio button on the side) doesn't work. It's an invalidation bug introduce by invalidation selector deduplication. Removing the dedup fixes it.
Attachments
Matthieu Dubet
Comment 1 2026-02-11 13:50:46 PST
Matthieu Dubet
Comment 2 2026-02-11 13:53:35 PST
Antti Koivisto
Comment 3 2026-02-12 07:13:51 PST
EWS
Comment 4 2026-02-12 08:21:15 PST
Committed 307366@main (1961f4c243df): <https://commits.webkit.org/307366@main> Reviewed commits have been landed. Closing PR #58513 and removing active labels.
EWS
Comment 5 2026-02-13 20:12:07 PST
Committed 305413.297@safari-7624-branch (302b78b92384): <https://commits.webkit.org/305413.297@safari-7624-branch> Reviewed commits have been landed. Closing PR #4486 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.