[CSS] Fix invalidation bug by removing deduplication https://bugs.webkit.org/show_bug.cgi?id=307593 rdar://169362651

Reviewed by NOBODY (OOPS!).

Turning dark mode (radio button on the side) doesn't work on https://en.wikipedia.org/wiki/Nominal_type_system
This is reverting part of invalidation selector deduplication introduced by https://commits.webkit.org/302297@main

* Source/WebCore/style/RuleFeature.cpp:
(WebCore::Style::RuleFeatureSet::collectFeatures):